# MNIST_ML

./: .gitignore  CMakeLists.txt  README.md  blur_pre_processor.hpp  blurred_pixel_vectorizer.hpp  cmake_install.cmake  deskew_pre_processor.cpp  deskew_pre_processor.hpp  euler_number_extractor.cpp  euler_number_extractor.hpp  feature_extractor.hpp  hog_extractor.cpp  hog_extractor.hpp  hough_transform_extractor.cpp  hough_transform_extractor.hpp  hu_moments_extractor.cpp  hu_moments_extractor.hpp  knn_model.cpp  knn_model.hpp  main.cpp  mnist.hpp  model.hpp  morphological_pre_processor.cpp  morphological_pre_processor.hpp  nn_model.cpp  nn_model.hpp  no_pixel_vectorizer.cpp  no_pixel_vectorizer.hpp  pca_model.hpp  pixel_data_feature_extractor.hpp  pre_processor.hpp  svm_model.cpp  svm_model.hpp  vectorizer.hpp
